work in progress on opcua

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -168,7 +168,7 @@ filter {
                   event.get('[miscbeat][aide][added]').to_a +
                   event.get('[miscbeat][aide][changed]').to_a +
                   event.get('[miscbeat][aide][removed]').to_a
-          event.set('[file][path]', paths.uniq.flatten.compact) unless (paths.length == 0)
+          event.set('[file][path]', paths.uniq.flatten.reject{ |e| e.nil? || e&.empty? }) unless (paths.length == 0)
         "
       }
 
