--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -435,12 +435,12 @@ filter {
 #            event.set('ruby_exception', 'ruby_signatures_attack_extract: ' + e.message)
 #          end
 #          if (matches.length > 0) then
-#              tacticNames = matches.map{ |x| x[1].gsub(' ', '_') }.compact
-#              tacticIds = tacticNames.clone.map(&:clone).map{ |x| $tacticIdMap[x] }.compact
-              #tacticRefs = tacticIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/tactics/') }.uniq.compact
-#              techniqueNames = matches.map{ |x| [x[2], x[3]].compact.join(':') }.compact
-#              techniqueIds = matches.map{ |x| x[4] }.compact
-              #techniqueRefs = techniqueIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/techniques/') }.uniq.compact
+#              tacticNames = matches.map{ |x| x[1].gsub(' ', '_') }.reject{ |e| e.nil? || e&.empty? }
+#              tacticIds = tacticNames.clone.map(&:clone).map{ |x| $tacticIdMap[x] }.reject{ |e| e.nil? || e&.empty? }
+              #tacticRefs = tacticIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/tactics/') }.uniq.reject{ |e| e.nil? || e&.empty? }
+#              techniqueNames = matches.map{ |x| [x[2], x[3]].reject{ |e| e.nil? || e&.empty? }.join(':') }.reject{ |e| e.nil? || e&.empty? }
+#              techniqueIds = matches.map{ |x| x[4] }.reject{ |e| e.nil? || e&.empty? }
+              #techniqueRefs = techniqueIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/techniques/') }.uniq.reject{ |e| e.nil? || e&.empty? }
 #              event.set('[threat][tactic][name]', tacticNames.uniq) unless (tacticNames.length == 0)
 #              event.set('[threat][tactic][id]', tacticIds.uniq) unless (tacticIds.length == 0)
 #              event.set('[threat][tactic][reference]', tacticRefs.uniq) unless (tacticRefs.length == 0)
