--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1,8 +1,5 @@
 filter {
 
-  # TODO: normalize all of these new OPC UA Binary Logs
-
-
   # Zeek intel indicators depending on indicator type #################################################################
   if ([zeek][intel][seen_indicator]) and ([zeek][intel][seen_indicator_type]) {
 
@@ -83,7 +80,7 @@ filter {
       code => "
         versions = Array.new
         versions << [event.get('[zeek][ipsec][maj_ver]'),
-                     event.get('[zeek][ipsec][min_ver]')].compact.join('.')
+                     event.get('[zeek][ipsec][min_ver]')].reject{ |e| e.nil? || e&.empty? }.join('.')
         event.set('[network][protocol_version]', versions)"
     }
   }
@@ -94,8 +91,12 @@ filter {
   if ([zeek][ntp][version])                       { mutate { id => "mutate_merge_normalize_zeek_ntp_version"
                                                             merge => { "[network][protocol_version]" => "[zeek][ntp][version]" } } }
 
-  if ([zeek][opcua_binary][version])                              { mutate { id => "mutate_merge_normalize_zeek_opcua_binary_version"
-                                                                             merge => { "[network][protocol_version]" => "[zeek][opcua_binary][version]" } } }
+  if ([zeek][opcua_binary][version])              { mutate { id => "mutate_merge_normalize_zeek_opcua_binary_version"
+                                                             merge => { "[network][protocol_version]" => "[zeek][opcua_binary][version]" } } }
+
+  if ([zeek][opcua_binary_browse][browse_view_description_view_version]) {
+                                                    mutate { id => "mutate_merge_normalize_zeek_opcua_binary_browse_browse_view_description_view_version"
+                                                             merge => { "[network][protocol_version]" => "[zeek][opcua_binary_browse][browse_view_description_view_version]" } } }
 
   if ([zeek][opcua_binary_opensecure_channel][client_proto_ver])  { mutate { id => "mutate_merge_normalize_zeek_opcua_binary_opensecure_channel_client_proto_version"
                                                                              merge => { "[network][protocol_version]" => "[zeek][opcua_binary_opensecure_channel][client_proto_ver]" } } }
@@ -181,7 +182,7 @@ filter {
       code => "
         actions = Array.new unless (actions = event.get('[event][action]'))
         actions.append([event.get('[zeek][bsap_ip_rdb][app_func_code]'),
-                        event.get('[zeek][bsap_ip_rdb][func_code]')].compact.join(':'))
+                        event.get('[zeek][bsap_ip_rdb][func_code]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
         event.set('[event][action]', actions)"
     }
   }
@@ -224,7 +225,7 @@ filter {
         actions = Array.new unless (actions = event.get('[event][action]'))
         actions.append([event.get('[zeek][dnp3_control][function_code]'),
                         event.get('[zeek][dnp3_control][operation_type]'),
-                        event.get('[zeek][dnp3_control][trip_control_code]')].compact.join(':'))
+                        event.get('[zeek][dnp3_control][trip_control_code]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
         event.set('[event][action]', actions)"
     }
   }
@@ -370,10 +371,14 @@ filter {
       code => "
         actions = Array.new unless (actions = event.get('[event][action]'))
         actions.append([event.get('[zeek][opcua_binary][msg_type]'),
-                        event.get('[zeek][opcua_binary][identifier_str]')].compact.join(':'))
+                        event.get('[zeek][opcua_binary][identifier_str]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
         event.set('[event][action]', actions)"
     }
   }
+
+  if ([zeek][opcua_binary_browse][browse_service_type]) {
+                                                   mutate { id => "mutate_merge_normalize_zeek_opcua_binary_browse_browse_service_type"
+                                                            merge => { "[event][action]" => "[zeek][opcua_binary_browse][browse_service_type]" } } }
 
   if ([zeek][profinet][operation_type])          { mutate { id => "mutate_merge_normalize_zeek_profinet_operation_type"
                                                            merge => { "[event][action]" => "[zeek][profinet][operation_type]" } } }
@@ -397,7 +402,7 @@ filter {
         actions = Array.new unless (actions = event.get('[event][action]'))
         action = [event.get('[zeek][s7comm][rosctr_name]'),
                   event.get('[zeek][s7comm][function_name]'),
-                  event.get('[zeek][s7comm][subfunction_name]')].compact.join(':')
+                  event.get('[zeek][s7comm][subfunction_name]')].reject{ |e| e.nil? || e&.empty? }.join(':')
         actions.append(action) unless action.nil? || action&.empty?
         event.set('[event][action]', actions)"
     }
@@ -478,7 +483,7 @@ filter {
         cmd = event.get('[zeek][smb_cmd][command]')
         subCmd = event.get('[zeek][smb_cmd][sub_command]')
         actions = Array.new unless (actions = event.get('[event][action]'))
-        actions.append((cmd =~ /^\s*transaction\d*\s*$/i) ? subCmd : [cmd, subCmd].compact.join(':'))
+        actions.append((cmd =~ /^\s*transaction\d*\s*$/i) ? subCmd : [cmd, subCmd].reject{ |e| e.nil? || e&.empty? }.join(':'))
         event.set('[event][action]', actions)"
     }
   }
@@ -796,13 +801,27 @@ filter {
              merge => { "[event][result]" => "[@metadata][zeek_ntlm_result]" } }
   }
 
-  if ([zeek][opcua_binary_status_code_detail]) {
-    if ([zeek][opcua_binary_status_code_detail][sub_code_str]) {
-      mutate { id => "mutate_merge_zeek_opcua_binary_status_code_detail_sub_code_str_result"
-               merge => { "[event][result]" => "[zeek][opcua_binary_status_code_detail][sub_code_str]" } }
-    } else if if ([zeek][opcua_binary_status_code_detail][status_code]) {
-      mutate { id => "mutate_merge_zeek_opcua_binary_status_code_detail_status_code_result"
-               merge => { "[event][result]" => "[zeek][opcua_binary_status_code_detail][status_code]" } }
+  if ([zeek][opcua_binary][error] or [zeek][opcua_binary][reason]) {
+    ruby {
+      # result = error:reason
+      id => "ruby_zeek_opcua_binary_generate_result"
+      code => "
+        results = Array.new unless (results = event.get('[event][result]'))
+        results.append([event.get('[zeek][opcua_binary][error]'),
+                        event.get('[zeek][opcua_binary][reason]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
+        event.set('[event][result]', results)"
+    }
+  }
+
+  if ([zeek][opcua_binary_status_code_detail][severity_str] or [zeek][opcua_binary_status_code_detail][sub_code_str]) {
+    ruby {
+      # result = severity_str:sub_code_str
+      id => "ruby_zeek_opcua_binary_status_code_detail_generate_result"
+      code => "
+        results = Array.new unless (results = event.get('[event][result]'))
+        results.append([event.get('[zeek][opcua_binary_status_code_detail][severity_str]').to_s.delete_prefix('Severity_'),
+                        event.get('[zeek][opcua_binary_status_code_detail][sub_code_str]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
+        event.set('[event][result]', results)"
     }
   }
 
@@ -1159,9 +1178,9 @@ filter {
         smbShare = Array(smbShare).first.delete_prefix('\\').delete_suffix('\\') unless smbShare.nil? or (smbShare.length == 0)
         smbFile = Array(smbFile).first.delete_prefix('\\') unless smbFile.nil? or (smbFile.length == 0)
 
-        fullParts = [smbHost, smbShare, smbFile].compact
+        fullParts = [smbHost, smbShare, smbFile].reject{ |e| e.nil? || e&.empty? }
         filePath << fullParts.join('\\')
-        fileDir << [smbHost, smbShare].compact.join('\\')
+        fileDir << [smbHost, smbShare].reject{ |e| e.nil? || e&.empty? }.join('\\')
         if !smbFile.nil? and (smbFile.length > 0) then
           fileName << fullParts.last
         end
@@ -1233,47 +1252,25 @@ filter {
   # URLs/URIs #########################################################################################################
   # ECS - various -> url.original
 
-  if ([zeek][opcua_binary][endpoint_url]) {                                       mutate { id => "mutate_merge_field_zeek_opcua_binary_endpoint_url_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary][endpoint_url]" } } }
-
-  if ([zeek][opcua_binary][sec_policy_uri]) {                                     mutate { id => "mutate_merge_field_zeek_opcua_binary_sec_policy_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary][sec_policy_uri]" } } }
-
-  if ([zeek][opcua_binary_diag_info_detail][namespace_uri_str]) {                 mutate { id => "mutate_merge_field_zeek_opcua_binary_diag_info_detail_namespace_uri_str_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_diag_info_detail][namespace_uri_str]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints][application_uri]) {                      mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_application_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][application_uri]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints][endpoint_url]) {                         mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_endpoint_url_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][endpoint_url]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints][gateway_server_uri]) {                   mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_gateway_server_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][gateway_server_uri]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints][product_uri]) {                          mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_product_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][product_uri]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints][profile_uri]) {                          mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_profile_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][profile_uri]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints][security_policy_uri]) {                  mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_security_policy_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][security_policy_uri]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints][transport_profile_uri]) {                mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_transport_profile_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][transport_profile_uri]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints_discovery][discovery_profile_uri]) {      mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_discovery_discovery_profile_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints_discovery][discovery_profile_uri]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints_discovery][discovery_profile_url]) {      mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_discovery_discovery_profile_url_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints_discovery][discovery_profile_url]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints_user_token][user_token_endpoint_url]) {   mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_user_token_user_token_endpoint_url_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints_user_token][user_token_endpoint_url]" } } }
-
-  if ([zeek][opcua_binary_get_endpoints_user_token][user_token_sec_policy_uri]) { mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_user_token_user_token_sec_policy_uri_url_original"
-                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints_user_token][user_token_sec_policy_uri]" } } }
+  if ([zeek][opcua_binary][log_types]) {
+    # OPCUA has a TON of URL/URI types, let's just get them all at once based
+    # on the key name =~ /_ur[il](_str(ing))?/
+    ruby {
+      id => "ruby_zeek_opcua_binary_all_uris"
+      code => "
+        urls = Array.new unless (urls = event.get('[url][original]'))
+        zeekVals = event.get('[zeek]')
+        if !zeekVals.nil? and (zeekVals.length > 0) then
+          flattened = (q = zeekVals.to_a).select { |key, value|
+            value = (1..value.size).zip(value).to_h if value.is_a? Array
+            !value.is_a?(Hash) || !value.each { |k, v| q << ['#{key}_#{k}', v] }
+          }.to_h.select { |key, value| value.is_a?String and (key =~ /opcua/) and (!(key =~ /_ur[il](_str(ing))?$/).nil?) }.values.uniq
+          urls.concat(flattened) unless flattened.nil? or (flattened.length == 0)
+        end
+        event.set('[url][original]', urls) unless urls.nil? or (urls.length == 0)
+      "
+    }
+  }
 
   if ([zeek][software][url]) {                                                    mutate { id => "mutate_merge_field_zeek_software_url_url_original"
                                                                                            merge => { "[url][original]" => "[zeek][software][url]" } } }
