--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4710,7 +4710,7 @@ filter {
       mutate { id => "mutate_merge_zeek_query"
                merge => { "[dns][host]" => "[zeek][dns][query]" } }
       ruby { id => "ruby_add_field_zeek_dns_opcode"
-             code => "event.set('[dns][opcode]', [ 'QUERY', event.get('[dns][opcode]') ].flatten.compact)" }
+             code => "event.set('[dns][opcode]', [ 'QUERY', event.get('[dns][opcode]') ].flatten.reject{ |e| e.nil? || e&.empty? })" }
     }
 
     if ([@metadata][answers_ip]) {
@@ -5339,7 +5339,7 @@ filter {
     ruby {
       id => "ruby_add_field_zeek_notice_event_original"
       code => " event.set('[event][original]', [event.get('[zeek][notice][msg]'),
-                                                event.get('[zeek][notice][sub]')].compact.join(':'))" }
+                                                event.get('[zeek][notice][sub]')].reject{ |e| e.nil? || e&.empty? }.join(':'))" }
 
     # split "Category::Subcategory" into two different fields
     ruby {
@@ -5394,13 +5394,13 @@ filter {
     # ECS - zeek.notice.category -> rule.category
     if ([zeek][notice][category]) {
       ruby { id => "ruby_add_field_ecs_rule_category_notice_category"
-             code => "event.set('[rule][category]', [ event.get('[zeek][notice][category]'), event.get('[rule][category]') ].flatten.compact)" }
+             code => "event.set('[rule][category]', [ event.get('[zeek][notice][category]'), event.get('[rule][category]') ].flatten.reject{ |e| e.nil? || e&.empty? })" }
     }
 
     # ECS - zeek.notice.sub_category -> rule.name
     if ([zeek][notice][sub_category]) {
       ruby { id => "ruby_add_field_ecs_zeek_rule_name_notice_sub_category"
-             code => "event.set('[rule][name]', [ event.get('[zeek][notice][sub_category]'), event.get('[rule][name]') ].flatten.compact)" }
+             code => "event.set('[rule][name]', [ event.get('[zeek][notice][sub_category]'), event.get('[rule][name]') ].flatten.reject{ |e| e.nil? || e&.empty? })" }
     }
 
     # ECS - zeek.notice.category -> rule.author (mapped)
@@ -5607,6 +5607,46 @@ filter {
         "
     }
 
+    if ([zeek][opcua_binary_activate_session][ext_obj_password]) {
+      mutate { id => "mutate_merge_zeek_opcua_binary_activate_session_ext_obj_password"
+               merge => { "[related][password]" => "[zeek][opcua_binary_activate_session][ext_obj_password]" } }
+    }
+
+    if ([zeek][opcua_binary_activate_session][ext_obj_user_name]) {
+      mutate { id => "mutate_merge_zeek_opcua_binary_activate_session_ext_obj_user_name"
+               merge => { "[related][user]" => "[zeek][opcua_binary_activate_session][ext_obj_user_name]" } }
+    }
+
+    if ([zeek][opcua_binary_create_session_user_token][user_token_policy_id]) {
+      mutate { id => "mutate_merge_zeek_opcua_binary_create_session_user_token_user_token_policy_id"
+               merge => { "[related][user]" => "[zeek][opcua_binary_create_session_user_token][user_token_policy_id]" } }
+    }
+
+    if ([zeek][opcua_binary_get_endpoints_user_token][user_token_policy_id]) {
+      mutate { id => "mutate_merge_zeek_opcua_binary_get_endpoints_user_token_user_token_policy_id"
+               merge => { "[related][user]" => "[zeek][opcua_binary_get_endpoints_user_token][user_token_policy_id]" } }
+    }
+
+    if ([zeek][opcua_binary_activate_session][ext_obj_policy_id]) and
+       ([zeek][opcua_binary_activate_session][ext_obj_type_id_str] =~ /(User(Name)?IdentityToken|AnonymousIdentityToken)/) {
+      mutate { id => "mutate_merge_zeek_opcua_binary_activate_session_ext_obj_policy_id"
+               merge => { "[related][user]" => "[zeek][opcua_binary_activate_session][ext_obj_policy_id]" } }
+    }
+
+    if ([zeek][opcua_binary_create_session_endpoints][text]) {
+      mutate { id => "mutate_add_field_zeek_opcua_binary_create_session_endpoints_text_software_name"
+               add_field => { "[zeek][software][name]" => "%{[zeek][opcua_binary_create_session_endpoints][text]}" } }
+      mutate { id => "mutate_add_field_zeek_opcua_binary_create_session_endpoints_text_software_type"
+               add_field => { "[zeek][software][software_type]" => "OPCUA" } }
+    }
+
+    if ([zeek][opcua_binary_get_endpoints_description][text]) {
+      mutate { id => "mutate_add_field_zeek_opcua_binary_get_endpoints_description_text_software_name"
+               add_field => { "[zeek][software][name]" => "%{[zeek][opcua_binary_get_endpoints_description][text]}" } }
+      mutate { id => "mutate_add_field_zeek_opcua_binary_get_endpoints_description_text_software_type"
+               add_field => { "[zeek][software][software_type]" => "OPCUA" } }
+    }
+
   } else if ([log_source] == "ospf") {
     #############################################################################################################################
     # ospf.log specific logic
@@ -5739,7 +5779,7 @@ filter {
 
     if (![event][module]) {
       ruby { id => "ruby_add_field_zeek_signature_event_module"
-             code => "event.set('[event][module]', [ 'zeek' ].flatten.compact)" }
+             code => "event.set('[event][module]', [ 'zeek' ].flatten.reject{ |e| e.nil? || e&.empty? })" }
     }
 
     # ECS - zeek.signatures.note -> rule.category
@@ -5778,12 +5818,12 @@ filter {
               event.set('ruby_exception', 'ruby_signatures_attack_extract: ' + e.message)
             end
             if (matches.length > 0) then
-                tacticNames = matches.map{ |x| x[1].gsub(' ', '_') }.compact
-                tacticIds = tacticNames.clone.map(&:clone).map{ |x| $tacticIdMap[x] }.compact
-                tacticRefs = tacticIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/tactics/') }.uniq.compact
-                techniqueNames = matches.map{ |x| [x[2], x[3]].compact.join(':') }.compact
-                techniqueIds = matches.map{ |x| x[4] }.compact
-                techniqueRefs = techniqueIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/techniques/') }.uniq.compact
+                tacticNames = matches.map{ |x| x[1].gsub(' ', '_') }.reject{ |e| e.nil? || e&.empty? }
+                tacticIds = tacticNames.clone.map(&:clone).map{ |x| $tacticIdMap[x] }.reject{ |e| e.nil? || e&.empty? }
+                tacticRefs = tacticIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/tactics/') }.uniq.reject{ |e| e.nil? || e&.empty? }
+                techniqueNames = matches.map{ |x| [x[2], x[3]].reject{ |e| e.nil? || e&.empty? }.join(':') }.reject{ |e| e.nil? || e&.empty? }
+                techniqueIds = matches.map{ |x| x[4] }.reject{ |e| e.nil? || e&.empty? }
+                techniqueRefs = techniqueIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/techniques/') }.uniq.reject{ |e| e.nil? || e&.empty? }
                 event.set('[threat][tactic][name]', tacticNames.uniq) unless (tacticNames.length == 0)
                 event.set('[threat][tactic][id]', tacticIds.uniq) unless (tacticIds.length == 0)
                 event.set('[threat][tactic][reference]', tacticRefs.uniq) unless (tacticRefs.length == 0)
@@ -5817,7 +5857,7 @@ filter {
         mutate { id => "remove_field_zeek_sensitive_signature_multiple"
                  remove_field => [ "[rule][category][0]" ] }
         ruby { id => "ruby_add_field_zeek_multiple_signatures"
-               code => "event.set('[rule][category]', [ 'Signatures::Multiple_Signatures', event.get('[rule][category]') ].flatten.compact)" }
+               code => "event.set('[rule][category]', [ 'Signatures::Multiple_Signatures', event.get('[rule][category]') ].flatten.reject{ |e| e.nil? || e&.empty? })" }
       }
     }
 
@@ -5835,7 +5875,7 @@ filter {
       id => "ruby_zeek_field_zeek_sip_version"
       code => '
       versions = Array.new
-      paths = [event.get("[zeek][sip][request_path]"), event.get("[zeek][sip][response_path]")].compact.join(",")
+      paths = [event.get("[zeek][sip][request_path]"), event.get("[zeek][sip][response_path]")].reject{ |e| e.nil? || e&.empty? }.join(",")
       paths.scan(/\bSIP:?\/([\d\.]+)/i) { |match| versions << match[0] }
       event.set("[zeek][sip][version]", versions.uniq)'
     }
@@ -6370,13 +6410,13 @@ filter {
                add_field => { "[rule][reference]" => "https://docs.zeek.org/en/current/scripts/base/frameworks/notice/weird.zeek.html" } }
       # ECS - zeek.weird.name -> rule.name
       ruby { id => "ruby_add_field_ecs_zeek_rule_name_weird_name"
-             code => "event.set('[rule][name]', [ event.get('[zeek][weird][name]'), event.get('[rule][name]') ].flatten.compact)" }
+             code => "event.set('[rule][name]', [ event.get('[zeek][weird][name]'), event.get('[rule][name]') ].flatten.reject{ |e| e.nil? || e&.empty? })" }
     }
 
     ruby {
       id => "ruby_add_field_zeek_weird_event_original"
       code => " event.set('[event][original]', [event.get('[zeek][weird][name]'),
-                                                event.get('[zeek][weird][addl]')].compact.join(':'))" }
+                                                event.get('[zeek][weird][addl]')].reject{ |e| e.nil? || e&.empty? }.join(':'))" }
 
     # remove signature fields that were mapped to ECS or not useful
     mutate { id => "mutate_remove_fields_zeek_weird"
@@ -6511,7 +6551,7 @@ filter {
 
     if ([event][dataset] == "smb_cmd") {
       ruby { id => "ruby_add_field_zeek_tmp_logtype_smb_cmd"
-             code => "event.set('[event][dataset]', [ 'smb_files', event.get('[event][dataset]') ].flatten.compact)" }
+             code => "event.set('[event][dataset]', [ 'smb_files', event.get('[event][dataset]') ].flatten.reject{ |e| e.nil? || e&.empty? })" }
     }
 
     # ECS - zeek.smb_files.times_created -> file.created
