work in progress on opcua

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1257,18 +1257,18 @@ filter {
     # on the key name =~ /_ur[il](_str(ing))?/
     ruby {
       id => "ruby_zeek_opcua_binary_all_uris"
-      code => "
-        urls = Array.new unless (urls = event.get('[url][original]'))
-        zeekVals = event.get('[zeek]')
+      code => '
+        urls = Array.new unless (urls = event.get("[url][original]"))
+        zeekVals = event.get("[zeek]")
         if !zeekVals.nil? and (zeekVals.length > 0) then
           flattened = (q = zeekVals.to_a).select { |key, value|
             value = (1..value.size).zip(value).to_h if value.is_a? Array
-            !value.is_a?(Hash) || !value.each { |k, v| q << ['#{key}_#{k}', v] }
+            !value.is_a?(Hash) || !value.each { |k, v| q << ["#{key}_#{k}", v] }
           }.to_h.select { |key, value| value.is_a?String and (key =~ /opcua/) and (!(key =~ /_ur[il](_str(ing))?$/).nil?) }.values.uniq
           urls.concat(flattened) unless flattened.nil? or (flattened.length == 0)
         end
-        event.set('[url][original]', urls) unless urls.nil? or (urls.length == 0)
-      "
+        event.set("[url][original]", urls) unless urls.nil? or (urls.length == 0)
+      '
     }
   }
 
