work in progress on opcua

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -819,9 +819,25 @@ filter {
       id => "ruby_zeek_opcua_binary_status_code_detail_generate_result"
       code => "
         results = Array.new unless (results = event.get('[event][result]'))
-        results.append([event.get('[zeek][opcua_binary_status_code_detail][severity_str]').to_s.delete_prefix('Severity_'),
-                        event.get('[zeek][opcua_binary_status_code_detail][sub_code_str]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
-        event.set('[event][result]', results)"
+        errClass = event.get('[zeek][opcua_binary_status_code_detail][severity_str]').to_s.delete_prefix('Severity_')
+        errMsg = event.get('[zeek][opcua_binary_status_code_detail][sub_code_str]')
+        errClass = if (errClass == 'Good')
+                     'Success'
+                   elsif (errClass == 'Bad')
+                     'Failure'
+                   else
+                     errClass
+                   end
+        errMsg = if (errMsg == 'Good')
+                   'Success'
+                 elsif (errMsg == 'Bad')
+                   'Failure'
+                 else
+                   errMsg
+                 end
+        errFinal = [errClass, errMsg].reject{ |e| e.nil? || e&.empty? }.uniq.join(':')
+        results.append(errFinal) unless errFinal&.empty?
+        event.set('[event][result]', results) unless (results.length == 0)"
     }
   }
 
