work in progress on updated OPCUA Binary

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -15,7 +15,7 @@
 
 filter {
 
-  if (([message] =~ /^\s*#/) or (![log][file][path])) {
+  if (([message] =~ /^#/) or (![log][file][path])) {
     drop { id => "drop_zeek_invalid_logs" }
   }
 
