--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -376,6 +376,10 @@ filter {
     }
   }
 
+  if ([zeek][opcua_binary_status_code_detail][source_str]) {
+                                                   mutate { id => "mutate_merge_normalize_zeek_opcua_binary_status_code_detail_source_str"
+                                                            merge => { "[event][action]" => "[zeek][opcua_binary_status_code_detail][source_str]" } } }
+
   if ([zeek][opcua_binary_browse][browse_service_type]) {
                                                    mutate { id => "mutate_merge_normalize_zeek_opcua_binary_browse_browse_service_type"
                                                             merge => { "[event][action]" => "[zeek][opcua_binary_browse][browse_service_type]" } } }
@@ -1279,8 +1283,8 @@ filter {
         if !zeekVals.nil? and (zeekVals.length > 0) then
           flattened = (q = zeekVals.to_a).select { |key, value|
             value = (1..value.size).zip(value).to_h if value.is_a? Array
-            !value.is_a?(Hash) || !value.each { |k, v| q << ["#{key}_#{k}", v] }
-          }.to_h.select { |key, value| value.is_a?String and (key =~ /opcua/) and (!(key =~ /_ur[il](_str(ing))?$/).nil?) }.values.uniq
+            !value.is_a?(Hash) || !value.each { |k, v| q << ["#{key}.#{k}", v] }
+          }.to_h.select { |key, value| value.is_a?String and (key =~ /opcua/) and (key !~ /\.has_/) and (!(key =~ /_ur[il](_str(ing))?$/).nil?) }.values.uniq
           urls.concat(flattened) unless flattened.nil? or (flattened.length == 0)
         end
         event.set("[url][original]", urls) unless urls.nil? or (urls.length == 0)
