--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -136,6 +136,19 @@ filter {
     }
   }
 
+  if ([zeek][opcua_binary_browse][browse_view_description_timestamp]) {
+    if ([zeek][opcua_binary_browse][browse_view_description_timestamp] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_browse_view_description_timestamp"
+               remove_field => [ "[zeek][opcua_binary_browse][browse_view_description_timestamp]" ] }
+    } else {
+      date {
+        id => "date_zeek_opcua_binary_browse_view_description_timestamp_hint"
+        match => [ "[zeek][opcua_binary_browse][browse_view_description_timestamp]", "UNIX" ]
+        target => "[zeek][opcua_binary_browse][browse_view_description_timestamp]"
+      }
+    }
+  }
+
   if ([zeek][opcua_binary][req_hdr_timeout_hint]) {
     if ([zeek][opcua_binary][req_hdr_timeout_hint] == "0.000000") {
       mutate { id => "mutate_remove_field_zeek_opcua_binary_req_hdr_timeout_hint_zero"
@@ -171,58 +184,6 @@ filter {
         id => "date_zeek_opcua_binary_res_hdr_timestamp"
         match => [ "[zeek][opcua_binary][res_hdr_timestamp]", "UNIX" ]
         target => "[zeek][opcua_binary][res_hdr_timestamp]"
-      }
-    }
-  }
-
-  if ([zeek][opcua_binary_create_session][req_session_timeout]) {
-    if ([zeek][opcua_binary_create_session][req_session_timeout] == "0.000000") {
-      mutate { id => "mutate_remove_field_zeek_opcua_binary_req_session_timeout_zero"
-               remove_field => [ "[zeek][opcua_binary_create_session][req_session_timeout]" ] }
-    } else {
-      date {
-        id => "date_zeek_opcua_binary_create_session_req_session_timeout"
-        match => [ "[zeek][opcua_binary_create_session][req_session_timeout]", "UNIX" ]
-        target => "[zeek][opcua_binary_create_session][req_session_timeout]"
-      }
-    }
-  }
-
-  if ([zeek][opcua_binary_create_session][revised_session_timeout]) {
-    if ([zeek][opcua_binary_create_session][revised_session_timeout] == "0.000000") {
-      mutate { id => "mutate_remove_field_zeek_opcua_binary_revised_session_timeout_zero"
-               remove_field => [ "[zeek][opcua_binary_create_session][revised_session_timeout]" ] }
-    } else {
-      date {
-        id => "date_zeek_opcua_binary_create_session_revised_session_timeout"
-        match => [ "[zeek][opcua_binary_create_session][revised_session_timeout]", "UNIX" ]
-        target => "[zeek][opcua_binary_create_session][revised_session_timeout]"
-      }
-    }
-  }
-
-  if ([zeek][opcua_binary_create_subscription][requested_publishing_interval]) {
-    if ([zeek][opcua_binary_create_subscription][requested_publishing_interval] == "0.000000") {
-      mutate { id => "mutate_remove_field_zeek_opcua_binary_create_subscription_requested_publishing_interval_zero"
-               remove_field => [ "[zeek][opcua_binary_create_subscription][requested_publishing_interval]" ] }
-    } else {
-      date {
-        id => "date_zeek_opcua_binary_create_subscription_requested_publishing_interval"
-        match => [ "[zeek][opcua_binary_create_subscription][requested_publishing_interval]", "UNIX" ]
-        target => "[zeek][opcua_binary_create_subscription][requested_publishing_interval]"
-      }
-    }
-  }
-
-  if ([zeek][opcua_binary_create_subscription][revised_publishing_interval]) {
-    if ([zeek][opcua_binary_create_subscription][revised_publishing_interval] == "0.000000") {
-      mutate { id => "mutate_remove_field_zeek_opcua_binary_create_subscription_revised_publishing_interval_zero"
-               remove_field => [ "[zeek][opcua_binary_create_subscription][revised_publishing_interval]" ] }
-    } else {
-      date {
-        id => "date_zeek_opcua_binary_create_subscription_revised_publishing_interval"
-        match => [ "[zeek][opcua_binary_create_subscription][revised_publishing_interval]", "UNIX" ]
-        target => "[zeek][opcua_binary_create_subscription][revised_publishing_interval]"
       }
     }
   }
