fix cisagov/Malcolm#214 by capping counts for tcp flags in conn.log's history

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4497,11 +4497,11 @@ filter {
         id => "ruby_zeek_conn_history"
         # see https://www.zeek.org/sphinx/scripts/base/protocols/conn/main.bro.html#type-Conn::Info
         code => "historyStr = event.get('[zeek][conn][history]').upcase
-                 sCnt = historyStr.count('S')
-                 hCnt = historyStr.count('H')
-                 aCnt = historyStr.count('A')
-                 fCnt = historyStr.count('F')
-                 rCnt = historyStr.count('R')
+                 sCnt = [historyStr.count('S'), 19].min
+                 hCnt = [historyStr.count('H'), 19].min
+                 aCnt = [historyStr.count('A'), 19].min
+                 fCnt = [historyStr.count('F'), 19].min
+                 rCnt = [historyStr.count('R'), 19].min
                  event.set('[tcpflags][syn]',     10**(sCnt-1)) if sCnt > 0
                  event.set('[tcpflags][syn-ack]', 10**(hCnt-1)) if hCnt > 0
                  event.set('[tcpflags][ack]',     10**(aCnt-1)) if aCnt > 0
